@@ -6,12 +6,14 @@ package com.huawei.opsfactory.operationintelligence.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.util.StringUtils;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -46,13 +48,15 @@ public class WebConfig {
         if (StringUtils.hasText(corsOrigin)) {
             String[] origins = StringUtils.commaDelimitedListToStringArray(corsOrigin);
             config.setAllowedOriginPatterns(Arrays.asList(origins));
+            config.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization", "X-Secret-Key", "X-User-Id"));
             config.setAllowCredentials(true);
         } else {
-            config.setAllowedOriginPatterns(List.of("*"));
+            config.setAllowedOriginPatterns(Collections.emptyList());
+            config.setAllowedHeaders(Collections.emptyList());
             config.setAllowCredentials(false);
         }
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedMethods(Arrays.asList(HttpMethod.GET.name(), HttpMethod.POST.name(), HttpMethod.PUT.name(),
+            HttpMethod.PATCH.name(), HttpMethod.DELETE.name(), HttpMethod.OPTIONS.name()));
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
